bin/testsuite/tests/compiler/src/errors/compiler2445.swg
//#global testerror "Err0447"

#test
{
    var v: [4] s32
    alias err = v[0]
    //@print(err)
}
